# crewai_example_repo

./: README.md  pyproject.toml
src/crewai_example_repo/: crew.py  main.py
src/crewai_example_repo/config/: agents.yaml
